--- a/geonode/layers/templates/layouts/panels.html
+++ b/geonode/layers/templates/layouts/panels.html
@@ -97,7 +97,7 @@
 <div class="tab-content">
 
     <div id="mandatory" class="tab-pane fade in active">
-        <br />
+        <!--<br />-->
         <div class="panel-group">
             <div class="panel panel-default">
                 <!-- div class="panel-heading">Data info</div -->
@@ -107,17 +107,17 @@
                             <div class="container-fluid">
                                 <div class="col-lg-8">
                                     <span><label for="{{ layer_form.title|id }}">{{ layer_form.title.label }}</label></span>
-                                    <p class="xxs-font-size">(Name by which the cited resource is known)</p>
+                                    <!--<p class="xxs-font-size">(Name by which the cited resource is known)</p>-->
                                     {{ layer_form.title }}
                                 </div>
                                 <div class="col-lg-3">
                                     <span><label for="{{ layer_form.date|id }}">{{ layer_form.date.label }}</label></span>
-                                    <p class="xxs-font-size">(When a given event occurred on the resource)</p>
+                                    <!--<p class="xxs-font-size">(When a given event occurred on the resource)</p>-->
                                     {{ layer_form.date }}
                                 </div>
                                 <div class="hidden">
                                     <span><label for="{{ layer_form.date_type|id }}">{{ layer_form.date_type.label }}</label></span>
-                                    <p class="xxs-font-size">(Identification of when a given event occurred)</p>
+                                    <!--<p class="xxs-font-size">(Identification of when a given event occurred)</p>-->
                                     {{ layer_form.date_type }}
                                 </div>
                             </div>
@@ -138,7 +138,7 @@
                                 <div class="col-lg-8">
                                     <div>
                                         <span><label for="{{ layer_form.abstract|id }}">{{ layer_form.abstract.label }}</label></span>
-                                        <p class="xxs-font-size">(Brief narrative summary of the content of the resource/s)</p>
+                                        <!--<p class="xxs-font-size">(Brief narrative summary of the content of the resource/s)</p>-->
                                         {{ layer_form.abstract }}
                                     </div>
                                 </div>
@@ -173,12 +173,11 @@
                             <hr />
                             <div>
                                 <span><label for="{{ layer_form.keywords|id }}">{{ layer_form.keywords.label }}</label></span>
-                                <p class="xxs-font-size">(A space or comma separated list of keywords)</p>
+                                <!--<p class="xxs-font-size">(A space or comma separated list of keywords)</p>-->
                                 {{ layer_form.keywords }}
                             </div>
                         </div>
                     </div>
-                            
                 </div>
             </div>
         </div>
@@ -186,8 +185,9 @@
 
 
     <div id="advanced" class="tab-pane fade">
-        <div class="row">
-            <div class="col">
+        <div class="panel-group">
+        <!--<div class="row">-->
+            <!--<div class="col">-->
 		        <div id="mdinfo" class="panel panel-default">
 		            <!-- div class="panel-heading">Metadata info</div -->
 		            <div class="panel-body">
@@ -195,40 +195,40 @@
 		                    <div class="col-lg-3">
 		                        <div>
 		                            <span><label for="{{ layer_form.language|id }}">{{ layer_form.language.label }}</label></span>
-		                            <p class="xxs-font-size">(Language used within the dataset)</p>
+		                            <!--<p class="xxs-font-size">(Language used within the dataset)</p>-->
 		                            {{ layer_form.language }}
 		                        </div>
 		                        <hr />
 		                        <div>
 		                            <span><label for="{{ layer_form.restriction_code_type|id }}">{{ layer_form.restriction_code_type.label }}</label></span>
-		                            <p class="xxs-font-size">(Limitation/s placed upon the access or use of data)</p>
+		                            <!--<p class="xxs-font-size">(Limitation/s placed upon the access or use of data)</p>-->
 		                            {{ layer_form.restriction_code_type }}
 		                        </div>
 		                    </div>
 		                    <div class="col-lg-3">
 		                        <div>
 		                            <span><label for="{{ layer_form.constraints_other|id }}">{{ layer_form.constraints_other.label }}</label></span>
-		                            <p class="xxs-font-size">(Other restrictions and legal prerequisites for accessing or use data and metadata)</p>
+		                            <!--<p class="xxs-font-size">(Other restrictions and legal prerequisites for accessing or use data and metadata)</p>-->
 		                            {{ layer_form.constraints_other }}
 		                        </div>
 		                    </div>
 		                    <div class="col-lg-3">
 		                        <div>
 		                            <span><label for="{{ layer_form.license|id }}">{{ layer_form.license.label }}</label></span>
-		                            <p class="xxs-font-size">(License of the dataset)</p>
+		                            <!--<p class="xxs-font-size">(License of the dataset)</p>-->
 		                            {{ layer_form.license }}
 		                        </div>
 		                        <hr />
 		                        <div>
 		                            <span><label for="{{ layer_form.metadata_author|id }}">{{ layer_form.metadata_author.label }}</label></span>
-		                            <p class="xxs-font-size">(Author of the metadata)</p>
+		                            <!--<p class="xxs-font-size">(Author of the metadata)</p>-->
 		                            {{ layer_form.metadata_author }}
 		                        </div>
 		                    </div>
 		                    <div class="col-lg-3">
 		                        <div>
 		                            <span><label for="{{ layer_form.data_quality_statement|id }}">{{ layer_form.data_quality_statement.label }}</label></span>
-		                            <p class="xxs-font-size">(General explanation of the data producer's knowledge about the lineage)</p>
+		                            <!--<p class="xxs-font-size">(General explanation of the data producer's knowledge about the lineage)</p>-->
 		                            {{ layer_form.data_quality_statement }}
 		                        </div>
 		                    </div>
@@ -243,10 +243,10 @@
                         </div>
 		            </div>
 		        </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
+            <!--</div>-->
+        <!--</div>-->
+        <!--<div class="row">-->
+            <!--<div class="col">-->
                 <div class="panel panel-default">
                     <!-- div class="panel-heading">Data Optional info</div -->
                     <div class="panel-body">
@@ -254,46 +254,46 @@
                             <div class="col-xs-6 col-lg-4">
                                 <div>
                                     <span><label for="{{ layer_form.edition|id }}">{{ layer_form.edition.label }}</label></span>
-                                    <p class="xxs-font-size">(Version of the cited resource)</p>
+                                    <!--<p class="xxs-font-size">(Version of the cited resource)</p>-->
                                     {{ layer_form.edition }}
                                 </div>
                                 <div>
                                     <span><label for="{{ layer_form.purpose|id }}">{{ layer_form.purpose.label }}</label></span>
-                                    <p class="xxs-font-size">(Brief narrative summary of the intentions with which the resource/s ...)</p>
+                                    <!--<p class="xxs-font-size">(Brief narrative summary of the intentions with which the resource/s ...)</p>-->
                                     {{ layer_form.purpose }}
                                 </div>
                                 <div>
                                     <span><label for="{{ layer_form.supplemental_information|id }}">{{ layer_form.supplemental_information.label }}</label></span>
-                                    <p class="xxs-font-size">(Any other descriptive information about the dataset)</p>
+                                    <!--<p class="xxs-font-size">(Any other descriptive information about the dataset)</p>-->
                                     {{ layer_form.supplemental_information }}
                                 </div>
                             </div>
                             <div class="col-xs-6 col-lg-4">
                                 <div>
                                     <span><label for="{{ layer_form.temporal_extent_start|id }}">{{ layer_form.temporal_extent_start.label }}</label></span>
-                                    <p class="xxs-font-size">(When a given event occurred on the resource)</p>
+                                    <!--<p class="xxs-font-size">(When a given event occurred on the resource)</p>-->
                                     {{ layer_form.temporal_extent_start }}
                                 </div>
                                 <div>
                                     <span><label for="{{ layer_form.temporal_extent_end|id }}">{{ layer_form.temporal_extent_end.label }}</label></span>
-                                    <p class="xxs-font-size">(Identification of when a given event occurred)</p>
+                                    <!--<p class="xxs-font-size">(Identification of when a given event occurred)</p>-->
                                     {{ layer_form.temporal_extent_end }}
                                 </div>
                                 <div>
                                     <span><label for="{{ layer_form.maintenance_frequency|id }}">{{ layer_form.maintenance_frequency.label }}</label></span>
-                                    <p class="xxs-font-size">(Identification of when a given event occurred)</p>
+                                    <!--<p class="xxs-font-size">(Identification of when a given event occurred)</p>-->
                                     {{ layer_form.maintenance_frequency }}
                                 </div>
                                 <div>
                                     <span><label for="{{ layer_form.spatial_representation_type|id }}">{{ layer_form.spatial_representation_type.label }}</label></span>
-                                    <p class="xxs-font-size">(Method used to represent geographic information in the dataset)</p>
+                                    <!--<p class="xxs-font-size">(Method used to represent geographic information in the dataset)</p>-->
                                     {{ layer_form.spatial_representation_type }}
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
+            <!--</div>-->
         </div>
     </div>
     
@@ -316,7 +316,7 @@
                     <div class="panel-body">
                         <div>
                             <span><label for="{{ layer_form.owner|id }}">{{ layer_form.owner.label }}</label></span>
-                            <p class="xxs-font-size">(Owner of the cited resource)</p>
+                            <!--<p class="xxs-font-size">(Owner of the cited resource)</p>-->
                             {{ layer_form.owner }}
                         </div>
                        {% if GEONODE_SECURITY_ENABLED %}
