--- a/geonode/layers/templates/layouts/panels.html
+++ b/geonode/layers/templates/layouts/panels.html
@@ -147,34 +147,38 @@
                     </div>
                     <hr/>
                     <div class="row">
-                        <div class="col" style="font-size:10px">
-                            <div id="basicCategoryInfo" class="container-fluid text-center">
-                                <!-- span><label class="control-label required-field">{% trans "Category" %}</label></span -->
-								<fieldset id="category_form">
-								  {% autoescape off %}
-								  {% for choice in category_form.category_choice_field.field.choices %}
-                                  {% if forloop.counter|divisibleby:6 %}<div class="row">{% endif %}
-                                      <div class="col-xs-2 col-sm-2">
-                                        <label class="fancy-checkbox">
-                                            <input type="radio" name="category_choice_field" value="{{ choice.0 }}"
-                                              {% ifequal category_form.initial choice.0 %} checked="checked" {% endifequal %} />
-                                            {{ choice.1 }}
-                                        </label>
-                                      </div>
-                                  {% if forloop.counter|divisibleby:6 %}</div>{% endif %}
-								  {% endfor %}
-								  {% endautoescape %}
-								</fieldset>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
                         <div class="col">
-                            <hr />
                             <div>
                                 <span><label for="{{ layer_form.keywords|id }}">{{ layer_form.keywords.label }}</label></span>
                                 <!--<p class="xxs-font-size">(A space or comma separated list of keywords)</p>-->
                                 {{ layer_form.keywords }}
+                            </div>
+                        </div>
+                    </div>
+                    <hr/>
+                    <div class="row">
+                        <div class="col">
+                            <div id="basicCategoryInfo" class="container-fluid">
+                                <span><label for="{{ category_form.category_choice_field|id }}" class="control-label required-field">{% trans "Category" %}</label></span>
+								<fieldset id="category_form" class="text-center" style="font-size:0.8em">
+								  {% autoescape off %}
+								  {% for choice in category_form.category_choice_field.field.choices %}
+                                      {% if forloop.counter0|divisibleby:8 %}<div class="row">{% endif %}
+                                          {% if forloop.counter0|divisibleby:4 %}<div class="col-xs-6 col-sm-6">{% endif %}
+                                            {% if forloop.counter0|divisibleby:4 %}<div class="row">{% endif %}
+                                              <div class="col-xs-3 col-sm-3">
+                                                <label class="fancy-checkbox">
+                                                    <input type="radio" name="category_choice_field" value="{{ choice.0 }}"
+                                                      {% ifequal category_form.initial choice.0 %} checked="checked" {% endifequal %} />
+                                                    {{ choice.1 }}
+                                                </label>
+                                              </div>
+                                            {% if forloop.counter|divisibleby:4 %}</div>{% endif %}
+                                          {% if forloop.counter|divisibleby:4 %}</div>{% endif %}
+                                      {% if forloop.counter|divisibleby:8 %}</div>{% endif %}
+								  {% endfor %}
+								  {% endautoescape %}
+								</fieldset>
                             </div>
                         </div>
                     </div>
